// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number row should match snapshot for component suffix 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    style={
      {
        "width": "50%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            [
              [
                {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                undefined,
              ],
              {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="foo_test_label"
      >
        foo
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "right",
              },
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "RegularFont",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 20,
                      "textAlign": "right",
                    },
                    undefined,
                    undefined,
                  ],
                  {
                    "color": "rgba(115, 115, 115, 1)",
                  },
                ],
              ]
            }
            testID="foo_test"
          >
            100
          </Text>
        </Text>
      </View>
    </View>
    <Text>
      $
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
</View>
`;

exports[`Number row should match snapshot for text suffix 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    style={
      {
        "width": "50%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            [
              [
                {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                undefined,
              ],
              {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="foo_test_label"
      >
        foo
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "right",
              },
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "RegularFont",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 20,
                      "textAlign": "right",
                    },
                    undefined,
                    undefined,
                  ],
                  {
                    "color": "rgba(115, 115, 115, 1)",
                  },
                ],
              ]
            }
            testID="foo_test"
          >
            100
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              [
                {
                  "fontFamily": "RegularFont",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 20,
                      "marginLeft": 4,
                    },
                    undefined,
                    undefined,
                  ],
                  {
                    "color": "rgba(115, 115, 115, 1)",
                  },
                ],
              ]
            }
            testID="foo_test_suffix"
          >
            $
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "flex-end",
        }
      }
    />
  </View>
</View>
`;
